tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_bracket_no_active_file_does_not_stick.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 16,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "Hunk 2/6 · a.rs",
    full_context: false,
}
