tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_d_next_hunk_scrolloff_binding.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 16,
    top_line: 9,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Hunk 2/6 · a.rs",
    full_context: false,
    visual_anchor: 0,
}
